// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish --canary --cd-version=patch: updated packages 1`] = `
Map {
  "package-1" => Object {
    "gitHead": GIT_HEAD,
    "name": "package-1",
    "version": 1.0.1-alpha.SHA,
  },
  "package-2" => Object {
    "dependencies": Object {
      "package-1": ^1.0.1-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-2",
    "version": 1.0.1-alpha.SHA,
  },
  "package-3" => Object {
    "devDependencies": Object {
      "package-2": ^1.0.1-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "peerDependencies": Object {
      "package-2": "^1.0.0",
    },
    "version": 1.0.1-alpha.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 1.0.1-alpha.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-1": ^1.0.1-alpha.SHA,
    },
    "name": "package-5",
    "optionalDependencies": Object {
      "package-3": ^1.0.1-alpha.SHA,
    },
    "private": true,
    "version": 1.0.1-alpha.SHA,
  },
}
`;

exports[`publish --canary --independent: npm published 1`] = `
Map {
  "package-1" => "canary",
  "package-3" => "canary",
  "package-4" => "canary",
  "package-2" => "canary",
}
`;

exports[`publish --canary --independent: updated packages 1`] = `
Map {
  "package-1" => Object {
    "gitHead": GIT_HEAD,
    "name": "package-1",
    "version": 1.1.0-alpha.SHA,
  },
  "package-2" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-2",
    "version": 2.1.0-alpha.SHA,
  },
  "package-3" => Object {
    "devDependencies": Object {
      "package-2": ^2.1.0-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "version": 3.1.0-alpha.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 4.1.0-alpha.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-3": ^3.1.0-alpha.SHA,
    },
    "name": "package-5",
    "private": true,
    "version": 5.1.0-alpha.SHA,
  },
}
`;

exports[`publish --canary differential internal 1`] = `
Map {
  "package-3" => Object {
    "dependencies": Object {
      "package-2": "^1.0.0",
    },
    "description": "one local dependency, one direct dependent, one transitive dependency",
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "version": 1.1.0-alpha.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-3": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, one direct dependent, two transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 1.1.0-alpha.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-4": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, no dependents, three transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-5",
    "version": 1.1.0-alpha.SHA,
  },
}
`;

exports[`publish --canary differential pendant 1`] = `
Map {
  "package-5" => Object {
    "dependencies": Object {
      "package-4": "^1.0.0",
    },
    "description": "one local dependency, no dependents, three transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-5",
    "version": 1.1.0-alpha.SHA,
  },
}
`;

exports[`publish --canary differential source 1`] = `
Map {
  "package-1" => Object {
    "description": "no local dependencies, four local dependents (three transitive)",
    "gitHead": GIT_HEAD,
    "name": "package-1",
    "version": 1.1.0-alpha.SHA,
  },
  "package-2" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, one direct dependent, no transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-2",
    "version": 1.1.0-alpha.SHA,
  },
  "package-3" => Object {
    "dependencies": Object {
      "package-2": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, one direct dependent, one transitive dependency",
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "version": 1.1.0-alpha.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-3": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, one direct dependent, two transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 1.1.0-alpha.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-4": ^1.1.0-alpha.SHA,
    },
    "description": "one local dependency, no dependents, three transitive dependencies",
    "gitHead": GIT_HEAD,
    "name": "package-5",
    "version": 1.1.0-alpha.SHA,
  },
}
`;

exports[`publish --canary: npm published 1`] = `
Map {
  "package-1" => "canary",
  "package-3" => "canary",
  "package-4" => "canary",
  "package-2" => "canary",
}
`;

exports[`publish --canary: updated packages 1`] = `
Map {
  "package-1" => Object {
    "gitHead": GIT_HEAD,
    "name": "package-1",
    "version": 1.1.0-alpha.SHA,
  },
  "package-2" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-2",
    "version": 1.1.0-alpha.SHA,
  },
  "package-3" => Object {
    "devDependencies": Object {
      "package-2": ^1.1.0-alpha.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "peerDependencies": Object {
      "package-2": "^1.0.0",
    },
    "version": 1.1.0-alpha.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 1.1.0-alpha.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-alpha.SHA,
    },
    "name": "package-5",
    "optionalDependencies": Object {
      "package-3": ^1.1.0-alpha.SHA,
    },
    "private": true,
    "version": 1.1.0-alpha.SHA,
  },
}
`;

exports[`publish --canary=beta: updated packages 1`] = `
Map {
  "package-1" => Object {
    "gitHead": GIT_HEAD,
    "name": "package-1",
    "version": 1.1.0-beta.SHA,
  },
  "package-2" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-beta.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-2",
    "version": 1.1.0-beta.SHA,
  },
  "package-3" => Object {
    "devDependencies": Object {
      "package-2": ^1.1.0-beta.SHA,
    },
    "gitHead": GIT_HEAD,
    "name": "package-3",
    "peerDependencies": Object {
      "package-2": "^1.0.0",
    },
    "version": 1.1.0-beta.SHA,
  },
  "package-4" => Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "gitHead": GIT_HEAD,
    "name": "package-4",
    "version": 1.1.0-beta.SHA,
  },
  "package-5" => Object {
    "dependencies": Object {
      "package-1": ^1.1.0-beta.SHA,
    },
    "name": "package-5",
    "optionalDependencies": Object {
      "package-3": ^1.1.0-beta.SHA,
    },
    "private": true,
    "version": 1.1.0-beta.SHA,
  },
}
`;
